minor fix with overflow hidden tooltip

--- a/src/styles/layouts/_tooltip.scss
+++ b/src/styles/layouts/_tooltip.scss
@@ -15,6 +15,7 @@
     width: 90%;
     font-family: Aclonica;
     box-sizing:border-box;
+    overflow-x: hidden;
     h2 {
         margin: 8px 0;
     }
